<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">


    <RelativeLayout
        android:id="@+id/picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pic"
            android:contentDescription="@string/instruction">

        </ImageView>

        <androidx.cardview.widget.CardView
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="700dp"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp"
            android:id="@+id/but1">




            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button"
                android:id="@+id/but"
                android:text="@string/start_assessment"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>



        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="770dp"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/calibrate"
                android:id="@+id/but2"
                android:background="@drawable/button"
                android:textSize="22sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="389dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="850dp"
            android:layout_centerHorizontal="true"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/chart"
                    android:textSize="20sp"
                    android:id="@+id/chart2"/>

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/lineChart"
                    android:layout_below="@+id/chart2"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:layout_marginTop="16dp" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shadow"
            android:id="@+id/title1">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="42dp"
                android:src="@drawable/imu2"
                android:id="@+id/img"
                android:contentDescription="@string/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/imu_assessment"
                android:textSize="25sp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect"
                android:layout_marginStart="300dp"/>
        </RelativeLayout>

    </RelativeLayout>




</ScrollView>