<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    android:padding="10dp"
    tools:context=".MainActivity2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="42dp"
            android:src="@drawable/imu2"
            android:id="@+id/img"
            android:contentDescription="@string/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/imu_patient_management"
            android:textSize="25sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="392dp"
        android:layout_height="295dp"
        android:layout_centerInParent="true"
        android:layout_margin="8dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shadow"
            android:padding="16dp">




            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/name"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/name1"
                android:layout_width="255dp"
                android:layout_height="47dp"
                android:layout_marginStart="32dp"
                android:layout_toEndOf="@id/name"
                android:autofillHints="name"
                android:inputType="text"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/name"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/age"
                android:layout_width="59dp"
                android:layout_height="33dp"
                android:layout_below="@id/name1"
                android:layout_marginTop="12dp"
                android:text="@string/age"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name1" />

            <!-- Underline view -->

            <EditText
                android:id="@+id/age1"
                android:layout_width="255dp"
                android:layout_height="47dp"
                android:layout_below="@id/name1"
                android:layout_marginStart="32dp"
                android:layout_toEndOf="@id/age"
                android:autofillHints="age"
                android:inputType="number"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/age"
                tools:layout_editor_absoluteY="50dp"
                app:layout_constraintTop_toBottomOf="@id/name1"/>

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/age1"
                android:text="@string/gender"
                android:textSize="20sp"
                android:layout_marginTop="12dp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="0dp"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="115dp"
                app:layout_constraintTop_toBottomOf="@id/age1"/>

            <Spinner
                android:id="@+id/gender1"
                android:layout_width="255dp"
                android:layout_height="47dp"
                android:layout_below="@id/age1"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/gender"
                android:autofillHints="gender"
                android:background="@android:color/transparent"
                android:dropDownWidth="match_parent"
                android:popupElevation="5dp"
                android:spinnerMode="dropdown"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/gender"
                tools:layout_editor_absoluteY="94dp"
                app:layout_constraintTop_toBottomOf="@id/age1"/>

            <View
                android:id="@+id/view"
                android:layout_width="255dp"
                android:layout_height="1dp"
                android:layout_below="@id/gender1"
                android:layout_alignParentStart="true"
                android:layout_marginStart="21dp"
                android:background="@color/black"
                app:layout_constraintStart_toEndOf="@id/gender"
                app:layout_constraintTop_toBottomOf="@id/gender1" />

            <TextView
                android:id="@+id/condition"
                android:layout_width="97dp"
                android:layout_height="30dp"
                android:layout_below="@id/view"
                android:text="@string/condition"
                android:textSize="20sp"
                android:layout_marginTop="12dp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="0dp"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="165dp"
                app:layout_constraintTop_toBottomOf="@id/view"/>

            <EditText
                android:id="@+id/condition1"
                android:layout_width="255dp"
                android:layout_height="49dp"
                android:layout_marginStart="0dp"
                android:autofillHints="condition"
                android:layout_marginTop="7dp"
                android:inputType="text"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/condition"
                tools:layout_editor_absoluteY="143dp"
                app:layout_constraintTop_toBottomOf="@id/view"/>

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button"
                app:cardCornerRadius="25dp"
                app:cardElevation="10dp"
                android:layout_marginTop="8dp"
                tools:layout_editor_absoluteX="104dp"
                app:layout_constraintStart_toEndOf="@id/condition"
                tools:layout_editor_absoluteY="211dp"
                app:layout_constraintTop_toBottomOf="@id/condition1"   >

                <Button
                    android:id="@+id/Create_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button"
                    android:text="@string/create_id"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>
